# Cree1865

./: .env.template  .gitignore  .ruff.toml  MODEL_CARD.md  MODEL_CARD.showcase.md  PIPELINE.md  README.md  README.showcase.md  SETUP.md  SOURCE_NOTES.md  hf_inference_standalone.py  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-tinker.txt  requirements.txt  requirements_hf_inference.txt  run_inference.py
OpenAIFineTune/: README.md
dakota_extraction/: README.md  run_extraction.py
dakota_rl_training/: README.md  README_visualization.md  launch_with_ledger.py  tinker_train.py  train.py
docs/: CONTRIBUTING.md  DEBUGGING_INFERENCE.md  GPU_REQUIREMENTS.md  HF_INFERENCE_README.md  INFERENCE_API_NOT_AVAILABLE.md  INFERENCE_DEPLOYMENT.md  REMOTE_INFERENCE.md  WANDB_ANALYSIS_SUMMARY.md  WANDB_DATA_GUIDE.md  WANDB_REPORT_STRUCTURE.md  WANDB_TRAINING_RESULTS_ANALYSIS.md  cree_synthetic_expansion_training.md
environments/cree1865_dictionary_qa/: README.md  pyproject.toml
environments/cree1865_dictionary_qa/.prime/: .env-metadata.json
environments/cree1865_dictionary_qa/configs/rl/: cree-smoke.toml
environments/cree1865_dictionary_qa/cree1865_dictionary_qa/: __init__.py  environment.py
environments/cree1865_dictionary_qa/cree1865_dictionary_qa/data/: prime_smoke_tasks.jsonl
examples/: example_hf_inference.py
huggingface_space/: DEPLOYMENT.md  PUSH_INSTRUCTIONS.md  README.md  __init__.py  app.py  requirements.txt  tinker_remote.py
scripts/: check_windows_tooling.ps1  deploy_dedicated_endpoint.py  sample_endpoint_from_dataset.py
(+131 files in other folders)
