[project]
name = "cree1865-dictionary-qa"
description = "Prime Verifiers environment for Watkins 1865 Cree dictionary QA tasks."
version = "0.1.0"
tags = ["single-turn", "cree", "dictionary", "qa", "translation", "rl"]
requires-python = ">=3.10"
authors = [
    { name = "Christian H. Cooper", email = "christian.cooper.us@gmail.com" },
]
dependencies = [
    "verifiers>=0.1.7.post0",
    "datasets>=2.18",
]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["cree", "watkins", "dictionary", "translation", "rl", "verifiers", "prime-intellect"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/HarleyCoops/Cree1865"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cree1865_dictionary_qa"]

[tool.hatch.metadata]
allow-direct-references = true
